syntax = "proto3";

package api.note_v1;

option go_package = "github.com/OlegRaykevich/testGRPC/pkg/note_v1";

service NoteV1 {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc GetNoteList (GetNoteListRequest) returns (GetNoteListResponse);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse);
}

message CreateNoteRequest{
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteResponse {
  int64 id = 1;
}

message GetNoteRequest{
  int64  id = 1;
}

message GetNoteResponse{
  string title = 1;
  string text = 2;
  string author = 3;
}

message GetNoteListRequest{
  repeated int64 id = 1;
}

message GetNoteListResponse{
  repeated string title = 1;
  repeated string text = 2;
  repeated string author = 3;
}

//message NoteInfo{
//  string title = 1;
//  string text = 2;
//  string author = 3;
//}

message UpdateNoteRequest{
  int64 id = 1;
  string newTitle = 2;
  string text = 3;
}

message UpdateNoteResponse{
  bool result = 1;
}

message DeleteNoteRequest{
  int64 id = 1;
}

message DeleteNoteResponse{
  bool result = 1;
}